--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Croma 3D - Impresión 3D Mayorista y Minorista",
-  "short_name": "Croma 3D",
+  "name": "Chroma3D - Impresión 3D Mayorista y Minorista",
+  "short_name": "Chroma3D",
   "description": "Modelos impresos de alta calidad listos para enviar o fabricar bajo demanda.",
   "start_url": "/",
   "display": "standalone",
