--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,8 +38,8 @@ services:
   app:
     profiles: ["prod"]
     build:
-      context: ../..
-      dockerfile: ./Dockerfile
+      context: .
+      dockerfile: Dockerfile
     container_name: tienda3d_app
     env_file: [.env]
     environment:
@@ -98,8 +98,8 @@ services:
   app_dev:
     profiles: ["dev"]
     build:
-      context: ../..
-      dockerfile: ./Dockerfile
+      context: .
+      dockerfile: Dockerfile
     container_name: tienda3d_app_dev
     env_file: [.env]
     environment:
