--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,7 +78,7 @@ services:
       - ./backups:/data/backups
       - ./tools/backup_uploads.sh:/scripts/backup_uploads.sh:ro
       - ./tools/restore_uploads.sh:/scripts/restore_uploads.sh:ro
-      - ./tools/backup.cron:/etc/crontabs/root:ro
+      - ./tools/crontabs:/etc/crontabs:ro
     entrypoint: sh -lc "apk add --no-cache tzdata bash coreutils findutils && chmod +x /scripts/*.sh && echo 'Iniciando crond' && crond -f -L /var/log/cron.log"
     restart: unless-stopped
 
