--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 networks:
   internal_net:
     internal: true
@@ -7,7 +5,9 @@ networks:
     driver: bridge
 
 volumes:
-  db_data: {}
+  app_db_data:
+    external: true
+    name: app_db_data
   caddy_data: {}
   caddy_config: {}
 
@@ -15,21 +15,25 @@ services:
   db:
     image: postgres:15-alpine
     container_name: tienda3d_db
-    env_file: [.env]
+    env_file:
+      - .env
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - db_data:/var/lib/postgresql/data
-    networks: [internal_net]
+      - app_db_data:/var/lib/postgresql/data
+    networks:
+      - internal_net
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 10
     restart: unless-stopped
-    tmpfs: [/tmp, /var/run/postgresql]
+    tmpfs:
+      - /tmp
+      - /var/run/postgresql
 
   # ----- PROD -----
   app:
@@ -38,7 +42,8 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: tienda3d_app
-    env_file: [.env]
+    env_file:
+      - .env
     environment:
       APP_ENV: production
       DB_HOST: db
@@ -47,12 +52,14 @@ services:
       DB_PASSWORD: ${POSTGRES_PASSWORD}
       DB_NAME: ${POSTGRES_DB}
     depends_on:
-      db: { condition: service_healthy }
-    # SIN "ports" en prod
+      db:
+        condition: service_healthy
     volumes:
       - ./uploads:/app/uploads
       - ./public:/app/public
-    networks: [internal_net, edge_net]
+    networks:
+      - internal_net
+      - edge_net
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://localhost:8080 || exit 1"]
       interval: 10s
@@ -60,35 +67,21 @@ services:
       retries: 10
     restart: unless-stopped
     user: "1000:1000"
-    security_opt: ["no-new-privileges:true"]
-    cap_drop: [ALL]
+    security_opt:
+      - no-new-privileges:true
+    cap_drop:
+      - ALL
     read_only: true
-    tmpfs: [/tmp]
-
-  # ----- BACKUP -----
-  backup:
-    profiles: ["prod", "dev"]
-    image: alpine:3.20
-    container_name: tienda3d_backup
-    environment:
-      TZ: America/Argentina/Buenos_Aires
-    volumes:
-      # Montamos uploads y backups en /data
-      - ./uploads:/data/uploads:ro
-      - ./backups:/data/backups
-      - ./tools/backup_uploads.sh:/scripts/backup_uploads.sh:ro
-      - ./tools/restore_uploads.sh:/scripts/restore_uploads.sh:ro
-      - ./tools/crontabs:/etc/crontabs:ro
-    entrypoint: sh -lc "apk add --no-cache tzdata bash coreutils findutils && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && echo 'Iniciando crond' && crond -f -L /var/log/cron.log"
-
-    restart: unless-stopped
+    tmpfs:
+      - /tmp
 
   caddy:
     profiles: ["prod"]
     image: caddy:2.7
     container_name: tienda3d_caddy
     depends_on:
-      app: { condition: service_started }
+      app:
+        condition: service_started
     ports:
       - "80:80"
       - "443:443"
@@ -96,14 +89,16 @@ services:
       - ./Caddyfile:/etc/caddy/Caddyfile:ro
       - caddy_data:/data
       - caddy_config:/config
-    networks: [edge_net]
+    networks:
+      - edge_net
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://localhost:2019/metrics || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 10
     restart: unless-stopped
-    tmpfs: [/tmp]
+    tmpfs:
+      - /tmp
 
   # ----- DEV -----
   app_dev:
@@ -112,7 +107,8 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: tienda3d_app_dev
-    env_file: [.env]
+    env_file:
+      - .env
     environment:
       APP_ENV: development
       DB_HOST: db
@@ -121,26 +117,29 @@ services:
       DB_PASSWORD: ${POSTGRES_PASSWORD}
       DB_NAME: ${POSTGRES_DB}
     depends_on:
-      db: { condition: service_healthy }
+      db:
+        condition: service_healthy
     ports:
-      - "8080:8080"     # debug como antes
+      - "8080:8080"
     volumes:
       - ./uploads:/app/uploads
       - ./public:/app/public
-      # opcional hot-reload:
-      # - ../..:/app:cached
-    networks: [internal_net, edge_net]
+    networks:
+      - internal_net
+      - edge_net
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://localhost:8080 || exit 1"]
     restart: unless-stopped
-    tmpfs: [/tmp]
+    tmpfs:
+      - /tmp
 
   caddy_dev:
     profiles: ["dev"]
     image: caddy:2.7
     container_name: tienda3d_caddy_dev
     depends_on:
-      app_dev: { condition: service_started }
+      app_dev:
+        condition: service_started
     ports:
       - "127.0.0.1:80:80"
       - "127.0.0.1:443:443"
@@ -148,7 +147,9 @@ services:
       - ./Caddyfile:/etc/caddy/Caddyfile:ro
       - caddy_data:/data
       - caddy_config:/config
-    networks: [edge_net]
+    networks:
+      - edge_net
     restart: unless-stopped
     user: "1000:1000"
-    tmpfs: [/tmp]
+    tmpfs:
+      - /tmp
