--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ volumes:
   app_db_data:
     external: true
     name: app_db_data
+  prod_db_data:
+    external: true
+    name: tienda3d-backend_pgdata
   caddy_data: {}
   caddy_config: {}
 
@@ -25,6 +28,8 @@ services:
       - app_db_data:/var/lib/postgresql/data
     networks:
       - internal_net
+    ports:
+      - "${DB_PORT:-5432}:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
@@ -51,6 +56,7 @@ services:
       DB_USER: ${POSTGRES_USER}
       DB_PASSWORD: ${POSTGRES_PASSWORD}
       DB_NAME: ${POSTGRES_DB}
+      DB_DSN: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${DB_PORT:-5432}/${POSTGRES_DB}?sslmode=disable
     depends_on:
       db:
         condition: service_healthy
@@ -116,6 +122,7 @@ services:
       DB_USER: ${POSTGRES_USER}
       DB_PASSWORD: ${POSTGRES_PASSWORD}
       DB_NAME: ${POSTGRES_DB}
+      DB_DSN: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${DB_PORT:-5432}/${POSTGRES_DB}?sslmode=disable
     depends_on:
       db:
         condition: service_healthy
