--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -40,7 +40,7 @@ services:
     volumes:
       - ./uploads:/app/uploads
       - ./public:/app/public
-      - ./backups:/app/backups
+      - backups_data:/app/backups
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://localhost:8080 || exit 1"]
       interval: 10s
@@ -65,5 +65,6 @@ services:
 
 volumes:
   db_data: {}
+  backups_data: {}
   # caddy_data: {}
   # caddy_config: {}
