--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 networks:
   chroma_internal:
     internal: true
@@ -55,8 +53,10 @@ services:
       - ./uploads:/app/uploads
       - ./public:/app/public
       - backups_data:/app/backups
-    expose:
-      - "8080"
+    ports:
+      - "8080:8080"
+    # expose:
+    #   - "8080"
     depends_on:
       db:
         condition: service_healthy
